--- a/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
@@ -264,6 +264,9 @@ Copyright (c) 2021, Marcel Kanter <marcel.kanter@googlemail.com>
 		reg = <0x0 0xc1105400 0x0 0x2ac>, <0x0 0xc110a000 0x0 0x304>;
 		reg-names = "aiu", "audin";
 
+		interrupts = <GIC_SPI 48 IRQ_TYPE_EDGE_RISING>, <GIC_SPI 50 IRQ_TYPE_EDGE_RISING>, <GIC_SPI 7 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "i2s", "spdif", "audin";
+
 		status = "okay";
 	};
 };
