--- a/sound/soc/meson/Kconfig
+++ b/sound/soc/meson/Kconfig
@@ -2,16 +2,6 @@
 menu "ASoC support for Amlogic platforms"
 	depends on ARCH_MESON || (COMPILE_TEST && COMMON_CLK)
 
-config SND_MESON_AIU
-	tristate "Amlogic AIU"
-	select SND_MESON_CODEC_GLUE
-	select SND_PCM_IEC958
-	imply SND_SOC_MESON_T9015
-	imply SND_SOC_HDMI_CODEC if DRM_MESON_DW_HDMI
-	help
-	  Select Y or M to add support for the Audio output subsystem found
-	  in the Amlogic Meson8, Meson8b and GX SoC families
-
 config SND_MESON_AXG_FIFO
 	tristate
 	select REGMAP_MMIO
@@ -103,12 +93,16 @@ config SND_MESON_CARD_UTILS
 config SND_MESON_CODEC_GLUE
 	tristate
 
+config SND_MESON_GX_AUDIO
+	tristate "Amlogic GX audio"
+	help
+		Select Y or M to add support for the Audio output subsystem found in the Amlogic Meson8, Meson8b and GX SoC families
+
 config SND_MESON_GX_SOUND_CARD
 	tristate "Amlogic GX Sound Card Support"
-	select SND_MESON_CARD_UTILS
-	imply SND_MESON_AIU
+	imply SND_MESON_GX_AUDIO
 	help
-	  Select Y or M to add support for the GXBB/GXL SoC sound card
+		Select Y or M to add support for the GXBB/GXL SoC sound card
 
 config SND_MESON_G12A_TOACODEC
 	tristate "Amlogic G12A To Internal DAC Control Support"
