--- a/sound/soc/meson/Makefile
+++ b/sound/soc/meson/Makefile
@@ -14,6 +14,8 @@ snd-soc-meson-axg-pdm-objs := axg-pdm.o
 snd-soc-meson-card-utils-objs := meson-card-utils.o
 snd-soc-meson-codec-glue-objs := meson-codec-glue.o
 snd-soc-meson-gx-audio-objs := gx-audio.o
+snd-soc-meson-gx-i2s-objs := gx-i2s.o
+snd-soc-meson-gx-i2sfifo-objs := gx-i2sfifo.o
 snd-soc-meson-gx-sound-card-objs := gx-card.o
 snd-soc-meson-g12a-toacodec-objs := g12a-toacodec.o
 snd-soc-meson-g12a-tohdmitx-objs := g12a-tohdmitx.o
@@ -33,6 +35,8 @@ obj-$(CONFIG_SND_MESON_AXG_PDM) += snd-soc-meson-axg-pdm.o
 obj-$(CONFIG_SND_MESON_CARD_UTILS) += snd-soc-meson-card-utils.o
 obj-$(CONFIG_SND_MESON_CODEC_GLUE) += snd-soc-meson-codec-glue.o
 obj-$(CONFIG_SND_MESON_GX_AUDIO) += snd-soc-meson-gx-audio.o
+obj-$(CONFIG_SND_MESON_GX_AUDIO) += snd-soc-meson-gx-i2s.o
+obj-$(CONFIG_SND_MESON_GX_AUDIO) += snd-soc-meson-gx-i2sfifo.o
 obj-$(CONFIG_SND_MESON_GX_SOUND_CARD) += snd-soc-meson-gx-sound-card.o
 obj-$(CONFIG_SND_MESON_G12A_TOACODEC) += snd-soc-meson-g12a-toacodec.o
 obj-$(CONFIG_SND_MESON_G12A_TOHDMITX) += snd-soc-meson-g12a-tohdmitx.o
