Parse device tree of sound card

--- a/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
@@ -213,6 +213,7 @@ Copyright (c) 2021, Marcel Kanter <marcel.kanter@googlemail.com>
 			};
 		};
 	};
+
 	pcm5102a: audio-codec-0 {
 		compatible = "ti,pcm5102a";
 		#sound-dai-cells = <0>;
@@ -221,9 +222,29 @@ Copyright (c) 2021, Marcel Kanter <marcel.kanter@googlemail.com>
 		pinctrl-names = "default";
 		status = "okay";
 	};
+
 	sound {
 		compatible = "amlogic,gx-sound-card";
+		model = "gx-sound-card";
+		audio-routing = "I2S Playback", "I2SFIFO Playback";
 		status = "okay";
+
+		dai-link@0 {
+			link-name = "I2SFIFO";
+			cpu {
+				sound-dai = <&i2sfifo>;
+			};
+		};
+
+		dai-link@1 {
+			link-name = "I2S<->PCM5102A";
+			cpu {
+				sound-dai = <&i2s>;
+			};
+			codec {
+				sound-dai = <&pcm5102a>;
+			};
+		};
 	};
 };
 
