--- a/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxbb-odroidc2.dts
@@ -247,6 +247,8 @@ Copyright (c) 2021, Marcel Kanter <marcel.kanter@googlemail.com>
 
 		dai-link@1 {
 			link-name = "I2S<->PCM5102A";
+			dai-format = "i2s";
+			mclk-fs = <256>;
 			cpu {
 				sound-dai = <&i2s>;
 			};
